--- a/02. display-card/index.html
+++ b/02. display-card/index.html
@@ -4,13 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Select me Card</title>
   </head>
   <body>
     <main>
-      <div class="main-card"><img src="" alt="" class="main-img" /></div>
+      <div class="main-card">
+        <img
+          src="./images/nat-weerawong-EfkWoPh7qQQ-unsplash.jpg"
+          alt=""
+          class="main-img"
+        />
+        <p id="heading-text">Click picture to see in full view</p>
+      </div>
       <div class="below-card">
-        <div class="small-cards">
+        <!-- <div class="small-cards">
           <img
             src="./images/cloudy-weather.jpg"
             alt="cloudy weather"
@@ -51,8 +59,10 @@
             alt="mesmering view"
             class="small-images"
           />
-        </div>
+        </div> -->
       </div>
     </main>
+
+    <script src="./script.js"></script>
   </body>
 </html>
