done all the changes and marked Done

--- a/02. display-card/index.html
+++ b/02. display-card/index.html
@@ -10,11 +10,7 @@
   <body>
     <main>
       <div class="main-card">
-        <img
-          src="./images/nat-weerawong-EfkWoPh7qQQ-unsplash.jpg"
-          alt=""
-          class="main-img"
-        />
+        <img src="" alt="" class="main-img hidden" />
         <p id="heading-text">Click picture to see in full view</p>
       </div>
       <div class="below-card">
