Added Functionality On Scroll animation

--- a/08. JS_onScroll_animation/code/index.html
+++ b/08. JS_onScroll_animation/code/index.html
@@ -39,10 +39,10 @@
         </div>
       </div>
 
-      <div class="display-block" data-reveal="left">
+      <div class="display-block">
         <div class="text-side">
-          <p class="bold">Herbal tea</p>
-          <p class="desc">
+          <p class="bold" data-reveal="left">Herbal tea</p>
+          <p class="desc" data-reveal="left">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore
             corrupti et debitis molestias ipsum deserunt iure delectus excepturi
             sint odio similique illo, magnam adipisci, officia voluptatem
@@ -54,13 +54,13 @@
         </div>
       </div>
 
-      <div class="display-block" data-reveal="left">
-        <div class="image-side">
+      <div class="display-block">
+        <div class="image-side" data-reveal="left">
           <img src="../images/herbel-tea.jpg" alt="herbal tea" />
         </div>
-        <div class="text-side" data-reveal="left">
-          <p class="bold">Rose Flavor Tea</p>
-          <p class="desc">
+        <div class="text-side">
+          <p class="bold" data-reveal="left">Rose Flavor Tea</p>
+          <p class="desc" data-reveal="left">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore
             vero quaerat dolorem! Minus autem esse fugit ipsa dolore placeat
             dolorem culpa ipsum ab, assumenda iusto fuga in! Commodi, ducimus
@@ -69,10 +69,10 @@
         </div>
       </div>
 
-      <div class="display-block" data-reveal="left">
+      <div class="display-block">
         <div class="text-side">
-          <p class="bold">Red tea</p>
-          <p class="desc">
+          <p class="bold" data-reveal="left">Red tea</p>
+          <p class="desc" data-reveal="left">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore
             corrupti et debitis molestias ipsum deserunt iure delectus excepturi
             sint odio similique illo, magnam adipisci, officia voluptatem
@@ -84,13 +84,13 @@
         </div>
       </div>
 
-      <div class="display-block" data-reveal="left">
-        <div class="image-side">
+      <div class="display-block">
+        <div class="image-side" data-reveal="left">
           <img src="../images/old-school-tea.jpg" alt="old sckool tea pot" />
         </div>
-        <div class="text-side" data-reveal="left">
-          <p class="bold">Flower Flavor Tea</p>
-          <p class="desc">
+        <div class="text-side">
+          <p class="bold" data-reveal="left">Flower Flavor Tea</p>
+          <p class="desc" data-reveal="left">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore
             vero quaerat dolorem! Minus autem esse fugit ipsa dolore placeat
             dolorem culpa ipsum ab, assumenda iusto fuga in! Commodi, ducimus
